2010-05-26  Rik <octave@nomad.inbox5.com>
        
        * sparse/svds.m: Overhaul code.  
        Return smallest singular values if sigma == 0 (Bug #29721).
        Avoid calculating U and V matrices unless requested.
        Correctly handle zero matrix input.
        Improve documentation string.

2010-05-26  Rik <octave@nomad.inbox5.com>

        * statistics/base/histc.m, statistics/base/iqr.m, 
        statistics/base/kurtosis.m, statistics/base/mode.m, 
        statistics/base/ranks.m, statistics/base/run_count.m, 
        statistics/base/skewness.m, statistics/base/statistics.m, 
        statistics/base/studentize.m: Improve validation of input arguments. 

2010-05-26  Jaroslav Hajek  <highegg@gmail.com>

	* specfun/isprime.m: Fix and further optimize.

2010-05-26  Rik <octave@nomad.inbox5.com>

        * plot/legend.m: Improve documentation string.

2010-05-26  Rik <octave@nomad.inbox5.com>
        
        * sparse/svds.m: Check struct input arguments.  Overhaul documentation.

2010-05-26  Ben Abbott <bpabbott@mac.com>

	* plot/legend.m: Key labels for specified objects.
	* plot/ancestor.m: Support vectors of handles.

2010-05-26  Rik <octave@nomad.inbox5.com>

        * sparse/svds.m: Initialize ARPACK starting vector in svds test code.
        Bug #29721.

2010-05-25  Ben Abbott <bpabbott@mac.com>

	* polynomial/spline.m: Ignore NaNs within input vectors.

2010-05-25  Jaroslav Hajek  <highegg@gmail.com>

	* specfun/primes.m: Use logical masks rather than numeric.
	* specfun/isprime.m: Rewrite using isprime.

2010-05-25  Jaroslav Hajek  <highegg@gmail.com>

	* miscellaneous/unimplemented.m: Don't mention onCleanup (supported).

2010-05-25  Jaroslav Hajek  <highegg@gmail.com>

	* statistics/base/median.m: Ensure NaNs where needed. Simplify first
	non-singleton dimension computation.

2010-05-24  Rik <octave@nomad.inbox5.com>
        * general/private/__isequal__.m, image/image.m, 
        statistics/base/ranks.m: Replace calls to deprecated functions.
