@@ -1,4 +1,9 @@
-2010-05-26  Rik <octave@nomad.inbox5.com>
+2010-05-31  Rik <octave@nomad.inbox5.com>
+	* specfun/legendre.m: Orient row vector correctly (bug #29997).
+        Add input validation for negative values and %tests to check
+        validation routines.
+
+2010-05-30  Rik <octave@nomad.inbox5.com>
         
         * sparse/svds.m: Overhaul code.  
         Return smallest singular values if sigma == 0 (Bug #29721).
